# when-will-we-get-there

./: .gitignore  main.py  pyproject.toml  updater.py
systemd/: when-will-we-get-there-updater.service  when-will-we-get-there-web.service
templates/: index.html  live.html
