[project]
name = "when-will-we-get-there"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.14.2",
    "cached>=2020.12.3",
    "fastapi>=0.121.3",
    "jinja2>=3.1.4",
    "uvicorn>=0.38.0",
]
